Add base API path and update swagger api
